# cocotbext-axi

./: .gitignore  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: regression-tests.yml
cmss_top/: Makefile  run_verdi.sh  test_cmss_top.py
cmss_top/src/: cmss_axi_sequence.py  cxl_init_sequencer.py  cxl_pkg.py  host.py  host_master.py  pack.py  pipe_driver.py  pipe_test.py  scoreboard.py  unpack.py
cocotbext/axi/: __init__.py  address_space.py  apb.py  axi_channels.py  axi_master.py  axi_ram.py  axi_slave.py  axil_channels.py  axil_master.py  axil_ram.py  axil_slave.py  axis.py  buddy_allocator.py  compat.py  constants.py  event.py  memory.py  reset.py  sparse_memory.py  stream.py  utils.py
tests/: Makefile  test_buddy_allocator.py
tests/apb/: Makefile  test_apb.py  test_apb.v
tests/axi/: Makefile  test_axi.py  test_axi.v
tests/axi_slave/: Makefile  test_axi_slave.py  test_axi_slave.v
tests/axil/: Makefile  test_axil.py  test_axil.v
tests/axis/: Makefile  test_axis.py  test_axis.v
